unpackaged/main/default/objects/Approval_Type__mdt/Approval_Type__mdt.object-meta.xml
<CustomObject>
    <label>Approval Type</label>
    <pluralLabel>Approval Types</pluralLabel>
</CustomObject>