unpackaged/main/default/objects/Approval_Type__mdt/fields/Approval_Group__c.field-meta.xml
<CustomField>
    <fullName>Approval_Group__c</fullName>
    <label>Approval Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>