unpackaged/main/default/objects/Approval_Type__mdt/fields/Monitor_Fields__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Fields__c</fullName>
    <description>Holds information about Sales Order fields that need to be monitored for approvals. Change on those fields will cause approval logic to re-evaluate the Sales Order for approvals.</description>
    <inlineHelpText>Holds information about Sales Order fields that need to be monitored for approvals. Change on those fields will cause approval logic to re-evaluate the Sales Order for approvals.</inlineHelpText>
    <label>Monitor Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>