unpackaged/main/default/objects/Approval_Type__mdt/fields/Order_Line_Result_Filename__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Result_Filename__c</fullName>
    <label>Order Line Result Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>