unpackaged/main/default/objects/Approval_Type__mdt/fields/Pending_Approval_Time__c.field-meta.xml
<CustomField>
    <fullName>Pending_Approval_Time__c</fullName>
    <label>Pending Approval Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>