unpackaged/main/default/objects/Approval_Type__mdt/fields/Snapshot_Filename__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Filename__c</fullName>
    <label>Snapshot Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>