unpackaged/main/default/objects/Approval_Type__mdt/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>Approval_Group__c</columns>
    <columns>Approval_Process__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Monitor_Fields__c</columns>
    <columns>Order_Line_Result_Filename__c</columns>
    <columns>Order_Result_Filename__c</columns>
    <columns>Pending_Approval_Time__c</columns>
    <columns>Sequence__c</columns>
    <columns>Snapshot_Filename__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
</ListView>